--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="yulbee" />
         <meta property="og:description" content="세상에서 제일 잘생긴 러시안 블루" />
         <meta property="og:image" content="율비.png" />
-        <title>르탄이 - 프로필 링크</title>
+        <title>yulbee</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
